--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,16 +35,15 @@ body{
 
 }
 
-.header{
-    position: fixed;
+.header {
     background-color: white;
-    width: 100%;
+    width: auto;
     padding: 20px;
     display: flex;
     align-items: center;
     padding-bottom: 20px;
-    
-}
+    box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
+  }
 
 .aside{
     position: fixed;
@@ -52,13 +51,30 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-right: 1px solid #D9D9D9;
+    box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
     width: 100px;
     height: 100%;
 }
 
+.main_content{
+    background-color: white;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 50px;
+    width: 80vw;
+    height: 80vh;
+}
 
+.main_header{
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #FF8F1F;
+}
 
+.main_header h1 {
+}
 
 
 
