--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,10 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: "Poppins";
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body{
     background-color: #D9D9D9;
@@ -68,13 +71,169 @@ body{
 .main_header{
     padding: 10px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    border-bottom: 2px solid #FF8F1F;
+    justify-content: space-between;
 }
 
-.main_header h1 {
+.left_header{
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
+
+
+.content_separation{
+    border: 1px solid #FF8F1F;
+    margin: 10px;
+}
+
+.form_header{
+    padding: 15px;
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bolder;
+    font-size: 24px;
+}
+
+.popup_registerProduct{
+    background-color: white;
+    height: 50%;
+    width: 28%;
+    margin: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.151);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; 
+    position: fixed;
+    display: none;
+    
+    
+}  
+
+.below{
+    margin: 20px;
+}
+
+.below label{
+    display: flex;
+    justify-content: left;
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.below input{
+    margin-top: 10px;
+    width: 500px;
+    height: 35px;
+    outline: none;
+    font-size: 20px;
+    border-radius: 5px;
+    border: 1px solid #a5a3a3af;
+}
+
+.side{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+.side label{
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: left;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.side input{
+
+    width: 220px;
+    height: 35px;
+    outline: none;
+    font-size: 20px;
+    border-radius: 5px;
+    border: 1px solid #a5a3a3af;
+    
+}
+.mandatory{
+    color: #FC0404;
+}
+
+.btn_form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+.btn_formCancel{
+    background-color: #FFDEDE;
+    color: #951111;
+    font-weight: bold;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 180px;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.btn_formCancel:hover{
+    background-color: #951111;
+    color: #FFDEDE;
+    transform: scale(1.05);
+}
+
+.btn_addProduct{
+    color: white;
+    background-color: #FF8F1F;
+    border: #FF8F1F;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.2s;
+    margin-right: 30px;
+}
+
+.btn_addProduct:hover{
+    background-color: #e67300;
+    transform: scale(1.05);
+}
+
+.main_header .btn_addProduct{
+    font-size: 20px;
+    font-weight: bolder;
+    padding: 10px;
+}
+
+
+.btn_form .btn_addProduct {
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 20px;
+    width: 200px;
+    padding: 0px;
+    height: 50px;
+}
+
+#overlay{
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.288); 
+    display: none; 
+    z-index: 1000; 
+}
+
 
 
 
