--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,12 @@
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
     font-family: "Poppins", sans-serif ;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body{
     background-color: #D9D9D9;
@@ -100,7 +102,7 @@ body{
 
 .popup_registerProduct{
     background-color: white;
-    height: 50%;
+    height: 55%;
     width: 28%;
     margin: 20px;
     border-radius: 5px;
@@ -218,9 +220,9 @@ body{
     margin-top: 20px;
     font-weight: bold;
     font-size: 20px;
-    width: 200px;
+    width: 210px;
     padding: 0px;
-    height: 50px;
+    height: 55px;
 }
 
 #overlay{
@@ -287,7 +289,63 @@ tr:hover {
     background-color: #f5f5f5;
 }
 
+.edit-btn{
+    background-color: white;
+    border: none;
+}
 
+.edit-btn svg{
+    fill: #FAAC04;
+    transition: fill 0.3s ease, transform 0.2s; 
+}
+
+.edit-btn:hover svg{
+    background-color: #faac043d;
+    transform: scale(1.15);
+}
+
+.delete-btn{
+    background-color: white;
+    border: none;
+    margin-top: 10px;
+    margin-left: 65px;
+
+}
+
+.delete-btn svg{
+    fill: #951111;
+    transition: fill 0.3s ease, transform 0.2s; 
+}
+.delete-btn:hover svg{
+    background-color:#FFDEDE ;
+    transform: scale(1.15);
+}
+
+#feedback-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    margin-top: 35px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 20px;
+    display: none;
+    width: 180px;
+    height: 30px;
+    margin-left: 150px;
+}
+
+.success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
 
 
 
