--- a/CSS/style.css
+++ b/CSS/style.css
@@ -319,22 +319,22 @@ tr:hover {
     background-color: #f5f5f5;
 }
 
-.edit-btn{
+.btn-edit{
     background-color: white;
     border: none;
 }
 
-.edit-btn svg{
+.btn-edit svg{
     fill: #FAAC04;
     transition: fill 0.3s ease, transform 0.2s; 
 }
 
-.edit-btn:hover svg{
+.btn-edit:hover svg{
     background-color: #faac043d;
     transform: scale(1.15);
 }
 
-.delete-btn{
+.btn-delete{
     background-color: white;
     border: none;
     margin-top: 10px;
@@ -342,11 +342,11 @@ tr:hover {
 
 }
 
-.delete-btn svg{
+.btn-delete svg{
     fill: #951111;
     transition: fill 0.3s ease, transform 0.2s; 
 }
-.delete-btn:hover svg{
+.btn-delete:hover svg{
     background-color:#FFDEDE ;
     transform: scale(1.15);
 }
